kubernetes/apps/default/home-assistant/matter-server/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: matter-server
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: matter-server
      app.kubernetes.io/instance: matter-server
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: home-assistant
            app.kubernetes.io/instance: home-assistant
      toPorts:
        - ports:
            - port: "8123"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: openthread
            app.kubernetes.io/instance: openthread
      toPorts:
        - ports:
            - port: "8981"
              protocol: TCP
